# docs/swagger/paths/cards/v1/{cardId}/patch.yaml
@@ -14,6 +14,45 @@ parameters:
       type: string
       example: 672a8db61a46f387714eac47
 
+requestBody:
+  required: true
+  content:
+    application/json:
+      schema:
+        type: object
+        required:
+          - columnId
+          - title
+          - description
+          - priority
+          - date
+        properties:
+          columnId:
+            description: Card columnId
+            type: string
+            example: 67280ee53bdc839326b08e24
+          title:
+            description: Card title
+            type: string
+            example: Materials
+          description:
+            description: Card description
+            type: string
+            example: Link of materials http://materials.link.com
+          priority:
+            description: Card priority
+            type: string
+            enum:
+              - low
+              - medium
+              - high
+              - without
+            example: without
+          date:
+            description: Card date
+            type: string
+            example: 2024-10-12T05:46:48.395Z
+
 responses:
   '200':
     description: Update card by id
@@ -36,6 +75,7 @@ responses:
               type: object
               example:
                 $ref: '../../../../components/schemas/Card.yaml'
+
   '401':
     $ref: '../../../../components/responses/401.yaml'
 
