# src/controllers/columns.js
@@ -12,15 +12,7 @@ import { convertToMongoObjId } from '../utils/convertToMongoObjId.js';
 
 const getAllColumns = async (req, res, next) => {
   const { boardId } = req.params;
-  console.log('boardId', boardId);
-  const boardIdObj = convertToMongoObjId(boardId);
-  const board = await getBoardByIdService(boardId);
-  if (!board) {
-    next(createHttpError(404, 'Board not found'));
-    return;
-  }
-  console.log('board', board);
-  const columns = await getColumnsService({ boardId: board._id });
+  const columns = await getColumnsService({ boardId: boardId });
   if (!columns) {
     next(createHttpError(404, 'Column not found'));
     return;
@@ -40,7 +32,7 @@ const getAllColumns = async (req, res, next) => {
 const createColumn = async (req, res, next) => {
   const { boardId } = req.params;
   const reqBody = req.body;
-  console.log(columnId);
+
   const board = await getBoardByIdService({
     _id: boardId,
   });
