# src/routers/cards.js
@@ -10,33 +10,19 @@ const cardsRouter = Router();
 cardsRouter.use(authenticate);
 
 // Routes для Cards
-cardsRouter.get(
-  '/:columnId',
-  isValidId('columnId'),
-  ctrlWrapper(cardsController.getAllCards),
-);
+cardsRouter.get('/:columnId', ctrlWrapper(cardsController.getAllCards));
 cardsRouter.post(
   '/:columnId',
-  isValidId('columnId'),
   validateBody(createCardSchema),
   ctrlWrapper(cardsController.createCard),
 );
-cardsRouter.get(
-  '/v2/:cardId',
-  isValidId('cardId'),
-  ctrlWrapper(cardsController.getByIdCard),
-);
+cardsRouter.get('/v1/:cardId', ctrlWrapper(cardsController.getByIdCard));
 
 cardsRouter.patch(
-  '/v2/:cardId',
-  isValidId('cardId'),
+  '/v1/:cardId',
   validateBody(updateCardSchema),
   ctrlWrapper(cardsController.updateCard),
 );
-cardsRouter.delete(
-  '/v2/:cardId',
-  isValidId('cardId'),
-  ctrlWrapper(cardsController.deleteCard),
-);
+cardsRouter.delete('/v1/:cardId', ctrlWrapper(cardsController.deleteCard));
 
 export default cardsRouter;
